objects/IdMatrix_Shared_Fraud_Record__c.object
<CustomObject>
    <fields>
        <fullName>Date_Fraud_Occured__c</fullName>
        <label>Date Fraud Occured</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Driver_Licence_Number__c</fullName>
        <label>Driver Licence Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <label>Employment Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fraud_File_Number__c</fullName>
        <label>Fraud File Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fraud_Sub_Type__c</fullName>
        <label>Fraud Sub Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fraud_Subject_Role__c</fullName>
        <label>Fraud Subject Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fraud_Type_Code__c</fullName>
        <label>Fraud Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fraud_Type__c</fullName>
        <label>Fraud Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Comment__c</fullName>
        <label>Other Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passport_Number__c</fullName>
        <label>Passport Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Number__c</fullName>
        <label>Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Subscriber__c</fullName>
        <label>Reporting Subscriber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veda_IdMatrix__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda IdMatrix</label>
        <referenceTo>Veda_IdMatrix__c</referenceTo>
        <relationshipLabel>IdMatrix Shared Fraud Record</relationshipLabel>
        <relationshipName>IdMatrix_Shared_Fraud_Record</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>IdMatrix Shared Fraud Record</label>
    <nameField>
        <label>Shared Fraud Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IdMatrix Shared Fraud Record</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>